# stop_wm

./: .gitignore  .pre-commit-config.yaml  README.md  download.sh  ef_download.example  pyproject.toml
data/: README.md
src/stop_wm/: analyze.py  config.py  flags.py  preprocess.py
tests/: test_main.py
